add alloy nonce manager example

--- a/alloy_woekspace_example/Cargo.toml
+++ b/alloy_woekspace_example/Cargo.toml
@@ -5,4 +5,5 @@ resolver = "2"
 members = [
         "alloy_basic_example",
         "alloy_arithmetic_example",
+        "alloy_nonce_manager_example",
 ]
