--- a/alloy_woekspace_example/Cargo.toml
+++ b/alloy_woekspace_example/Cargo.toml
@@ -7,4 +7,5 @@ members = [
   "alloy_arithmetic_example",
   "alloy_nonce_manager_example",
   "alloy_connect_to_geth_example",
+  "geth_transaction_json_rpc_example",
 ]
