add string replace example

--- a/regex_workspace_example/Cargo.toml
+++ b/regex_workspace_example/Cargo.toml
@@ -3,16 +3,17 @@
 resolver = "2"
 
 members = [
-        "regex_email_example",
-        "regex_hashtag_example",
-        "regex_phone_numbers_example",
-        "regex_multiple_example",
-        "regex_occurrences_example",
-        "regex_chinese_letters_example",
-        "regex_10_examples",
-        "regex_example",
-        "regex_command_example",
-        "basic_regex_example",
-        "rayon_regex_example",
-        "thread_rayon_regex_example",
+    "regex_email_example",
+    "regex_hashtag_example",
+    "regex_phone_numbers_example",
+    "regex_multiple_example",
+    "regex_occurrences_example",
+    "regex_chinese_letters_example",
+    "regex_10_examples",
+    "regex_example",
+    "regex_command_example",
+    "basic_regex_example",
+    "rayon_regex_example",
+    "thread_rayon_regex_example",
+    "string_replace_example",
 ]
