--- a/axum_workspace_example/axum_otlp_example/Cargo.toml
+++ b/axum_workspace_example/axum_otlp_example/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 axum = "0.7.7"
 axum-tracing-opentelemetry = "0.21.1"
-init-tracing-opentelemetry = { version = "0.22.0", features = ["otlp", "tracing_subscriber_ext"] }
+init-tracing-opentelemetry = {  git = "https://github.com/getong/tracing-opentelemetry-instrumentation-sdk", branch = "opentelemetry-0.26", features = ["otlp", "tracing_subscriber_ext"] }
 opentelemetry = { version = "0.26.0", features = ["default"] }
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
