--- a/reqwest_workspace_example/reqwest_read_all_chunks_example/Cargo.toml
+++ b/reqwest_workspace_example/reqwest_read_all_chunks_example/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-futures-util = "0.3.31"
 reqwest = { version = "0.12.8", features = ["stream"] }
 tokio = { version = "1.40.0", features = ["full"] }
+tokio-stream = "0.1.16"
