--- a/ethers_workspace_example/ethers_u256_example/Cargo.toml
+++ b/ethers_workspace_example/ethers_u256_example/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 ethers = "2.0.14"
+hex = "0.4.3"
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.121"
