--- a/axum_workspace_example/socketioxide_example/Cargo.toml
+++ b/axum_workspace_example/socketioxide_example/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.7"
-serde_json = "1.0.131"
-socketioxide = "0.14.1"
-tokio = { version = "1.40.0", features = ["full"] }
+rmpv = { version = "1.3.0", features = ["with-serde"] }
+serde_json = "1.0.132"
+socketioxide = "0.15.0"
+tokio = { version = "1.41.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
