--- a/ethers_workspace_example/Cargo.toml
+++ b/ethers_workspace_example/Cargo.toml
@@ -3,7 +3,7 @@
 resolver = "2"
 
 members = [
-    "ethers_u256_example",
-    "ethers_log_example",
+    # "ethers_u256_example",
+    # "ethers_log_example",
     "ethers_decode_log_example",
 ]
