--- a/ethers_workspace_example/Cargo.toml
+++ b/ethers_workspace_example/Cargo.toml
@@ -7,4 +7,5 @@ members = [
     # "ethers_log_example",
     "ethers_decode_log_example",
     "ethers_pretty_print_example",
+    "ethers_retry_endpoint_example",
 ]
