add axum bcrypt auth example

--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -37,4 +37,5 @@ members = [
     "axum_session_surrealdb_example",
     "axum_tower_http_servedir_example",
     "axum_vs_nginx_example",
+    "axum_bcrypt_auth_example",
 ]
