add axum extra javascript example

--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -38,4 +38,5 @@ members = [
     "axum_tower_http_servedir_example",
     "axum_vs_nginx_example",
     "axum_bcrypt_auth_example",
+    "axum_extra_javascript_example",
 ]
