add tungstenite url example

--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -40,4 +40,5 @@ members = [
     "axum_bcrypt_auth_example",
     "axum_extra_javascript_example",
     "axum_form_request_example",
+    "tungstenite_url_example",
 ]
