--- a/axum_workspace_example/tungstenite_url_example/Cargo.toml
+++ b/axum_workspace_example/tungstenite_url_example/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 
 [dependencies]
 futures-util = "0.3.31"
+rustls = "0.23.16"
 tokio = { version = "1.41.0", features = ["full"] }
-tokio-tungstenite = { version = "0.24.0", features = ["url", "rustls-tls-native-roots"] }
+tokio-tungstenite = { version = "0.24.0", features = ["url", "native-tls"] }
 tracing-subscriber = "0.3.18"
 url = "2.5.2"
