--- a/axum_workspace_example/axum_otlp_example/Cargo.toml
+++ b/axum_workspace_example/axum_otlp_example/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.7"
-axum-tracing-opentelemetry = "0.21.1"
-init-tracing-opentelemetry = {  git = "https://github.com/getong/tracing-opentelemetry-instrumentation-sdk", branch = "opentelemetry-0.26", features = ["otlp", "tracing_subscriber_ext"] }
+axum-tracing-opentelemetry = "0.23.0"
+init-tracing-opentelemetry = {  version = "0.23", features = ["otlp", "tracing_subscriber_ext"] }
 opentelemetry = { version = "0.26.0", features = ["default"] }
 serde_json = "1.0.132"
 tokio = { version = "1.41.0", features = ["full"] }
 tracing = "0.1.40"
-tracing-opentelemetry-instrumentation-sdk = "0.21.0"
+tracing-opentelemetry-instrumentation-sdk = "0.23.0"
