--- a/libp2p_workspace_example/libp2p_secp256k1_secret_key_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_secp256k1_secret_key_example/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 ethers = "2.0.14"
 hex = "0.4.3"
 libp2p = { version = "0.54.1", features = ["full"] }
-secp256k1 = { version = "0.29.1", features = ["alloc", "std", "hashes", "hashes-std", "rand", "rand-std", "serde"] }
+secp256k1 = { version = "0.30.0", features = ["alloc", "std", "hashes", "rand", "serde"] }
