add axum image upload example

--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -41,4 +41,5 @@ members = [
     "axum_extra_javascript_example",
     "axum_form_request_example",
     "tungstenite_url_example",
+    "axum_image_upload_example",
 ]
