--- a/axum_workspace_example/axum_image_upload_example/Cargo.toml
+++ b/axum_workspace_example/axum_image_upload_example/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 axum = { version = "0.7.7", features = ["multipart"] }
 tokio = { version = "1.41.1", features = ["full"] }
+tower = "0.5.1"
+tower-http = { version = "0.6.1", features = ["limit"] }
