add axum image upload with form example

--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -42,4 +42,5 @@ members = [
     "axum_form_request_example",
     "tungstenite_url_example",
     "axum_image_upload_example",
+    "axum_image_upload_with_form_example",
 ]
