add axum multi static file server example

--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -46,4 +46,5 @@ members = [
     "axum_html_table_example",
     "axum_multipart_form_example",
     "axum_askama_template_example",
+    "axum_multi_static_file_server_example",
 ]
