--- a/libp2p_workspace_example/libp2p_misc_server_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_misc_server_example/Cargo.toml
@@ -4,17 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+axum = "0.7.9"
 base64 = "0.22"
-clap = { version = "4.5.7", features = ["derive"] }
+clap = { version = "4.5.21", features = ["derive"] }
 futures = "0.3"
 futures-timer = "3"
-http-body-util = "0.1"
-hyper = { version = "1", features = ["full"]}
-hyper-util = { version = "0.1", features = ["full"] }
-libp2p = { version = "0.54.0", features = ["full"] }
-prometheus-client = "0.22.2"
-serde = "1.0.203"
-serde_derive = "1.0.203"
+libp2p = { version = "0.54.1", features = ["full"] }
+prometheus-client = "0.22.3"
+serde = "1.0.215"
+serde_derive = "1.0.215"
 serde_json = "1.0"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 tracing = "0.1.40"
