--- a/libp2p_workspace_example/libp2p_peer_id_from_public_key_string_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_peer_id_from_public_key_string_example/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+ethers = "2.0.14"
 hex = "0.4.3"
 libp2p = { version = "0.54.1", features = ["full"] }
