--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -50,4 +50,5 @@ members = [
   "libp2p_peer_id_from_secp256k1_public_key_example",
   "libp2p_peer_id_from_secp256k1_secret_key_example",
   "libp2p_peer_id_generation_example",
+  "libp2p_kademlia_json_example",
 ]
