--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -3,48 +3,49 @@
 resolver = "2"
 
 members = [
-    "axum_example1",
-    "axum_sessions_auth_example",
-    "axum_example",
-    "axum_server_example",
-    "axum_type_safe_routing_example",
-    "axum_style_magic_function_params_example",
-    # "axum_login_example",
-    "axum_simple_router_example",
-    "axum_stream_protobuf_example",
-    "axum_post_example",
-    # "axum_prost_server_example",
-    "reqwest_prost_client_example",
-    "axum_auth_example",
-    "axum_auth_custom_example",
-    "axum_websocket_server_example",
-    "axum_websocket_client_example",
-    "axum_echo_example",
-    "axum_handle_parameter_example",
-    "axum_prost_post_echo_example",
-    "axum_post_echo_json_example",
-    "axum_otlp_example",
-    "axum_route_service_example",
-    "socketioxide_example",
-    "axum_basic_auth_example",
-    "axum_streams_json_example",
-    "axum_streams_csv_example",
-    "axum_tower_sessions_example",
-    "axum_tower_sessions_with_signed_example",
-    "axum_tower_sessions_with_private_example",
-    "axum_tower_http_example",
-    "axum_from_request_parts_tower_sessions_example",
-    "axum_session_surrealdb_example",
-    "axum_tower_http_servedir_example",
-    "axum_vs_nginx_example",
-    "axum_bcrypt_auth_example",
-    "axum_extra_javascript_example",
-    "axum_form_request_example",
-    "tungstenite_url_example",
-    "axum_image_upload_example",
-    "axum_image_upload_with_form_example",
-    "axum_html_table_example",
-    "axum_multipart_form_example",
-    "axum_askama_template_example",
-    "axum_multi_static_file_server_example",
+  "axum_example1",
+  "axum_sessions_auth_example",
+  "axum_example",
+  "axum_server_example",
+  "axum_type_safe_routing_example",
+  "axum_style_magic_function_params_example",
+  # "axum_login_example",
+  "axum_simple_router_example",
+  "axum_stream_protobuf_example",
+  "axum_post_example",
+  # "axum_prost_server_example",
+  "reqwest_prost_client_example",
+  "axum_auth_example",
+  "axum_auth_custom_example",
+  "axum_websocket_server_example",
+  "axum_websocket_client_example",
+  "axum_echo_example",
+  "axum_handle_parameter_example",
+  "axum_prost_post_echo_example",
+  "axum_post_echo_json_example",
+  "axum_otlp_example",
+  "axum_route_service_example",
+  "socketioxide_example",
+  "axum_basic_auth_example",
+  "axum_streams_json_example",
+  "axum_streams_csv_example",
+  "axum_tower_sessions_example",
+  "axum_tower_sessions_with_signed_example",
+  "axum_tower_sessions_with_private_example",
+  "axum_tower_http_example",
+  "axum_from_request_parts_tower_sessions_example",
+  "axum_session_surrealdb_example",
+  "axum_tower_http_servedir_example",
+  "axum_vs_nginx_example",
+  "axum_bcrypt_auth_example",
+  "axum_extra_javascript_example",
+  "axum_form_request_example",
+  "tungstenite_url_example",
+  "axum_image_upload_example",
+  "axum_image_upload_with_form_example",
+  "axum_html_table_example",
+  "axum_multipart_form_example",
+  "axum_askama_template_example",
+  "axum_multi_static_file_server_example",
+  "axum_htmx_templates",
 ]
