--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -48,4 +48,5 @@ members = [
   "axum_askama_template_example",
   "axum_multi_static_file_server_example",
   "axum_htmx_templates",
+  "axum_todo_utoipa_swagger_ui_example",
 ]
