--- a/openraft_workspace_example/raft_kv_memstore_network_v2/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore_network_v2/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-openraft = {git = "https://github.com/databendlabs/openraft", features = ["serde", "singlethreaded", "type-alias"]}
+memstore = { git = "https://github.com/databendlabs/openraft" }
+openraft = { git = "https://github.com/databendlabs/openraft", features = ["serde", "singlethreaded", "type-alias"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
