--- a/openraft_workspace_example/raft_kv_memstore/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 actix-web = "4.9.0"
 clap = { version = "4.5.18", features = ["derive", "env"] }
 env_logger = "0.11.5"
-memstore = {git = "https://github.com/databendlabs/openraft", features = []}
+memstore = {git = "https://github.com/databendlabs/openraft" }
 openraft = {git = "https://github.com/databendlabs/openraft", features = ["serde", "type-alias"]}
 reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0.210", features = ["derive"] }
@@ -18,3 +18,6 @@ tokio = { version = "1.40.0", default-features = false, features = ["sync"] }
 tracing = "0.1.40"
 tracing-futures = "0.2.5"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+
+[features]
+serde = []
