--- a/openraft_workspace_example/raft_kv_memstore_network_v2/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore_network_v2/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2021"
 
 [dependencies]
 memstore = { git = "https://github.com/databendlabs/openraft" }
-openraft = { git = "https://github.com/databendlabs/openraft", features = ["serde", "singlethreaded", "type-alias"] }
+openraft = { git = "https://github.com/databendlabs/openraft", features = ["serde", "type-alias"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+
+[features]
+serde = []
