--- a/openraft_workspace_example/raft_kv_memstore_singlethreaded/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore_singlethreaded/Cargo.toml
@@ -6,13 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.5.18", features = ["derive", "env"] }
 openraft = {git = "https://github.com/databendlabs/openraft", features = ["serde", "singlethreaded", "type-alias"]}
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
-tokio = { version = "1.40.0", features = ["sync"] }
+tokio = { version = "1.40.0", default-features = false, features = ["sync"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 
 [dev-dependencies]
 maplit = "1.0.2"
+
+[features]
+serde = []
