--- a/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
@@ -10,7 +10,7 @@ rocksdb = "0.22.0"
 tide = "0.16.0"
 clap = { version = "4.5.18", features = ["derive", "env"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-openraft = { git = "https://github.com/databendlabs/openraft", features = ["serde", "type-alias"] }
+openraft = { git = "https://github.com/databendlabs/openraft", features = ["serde", "type-alias", "serde_json"] }
 reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
@@ -24,3 +24,6 @@ toy-rpc = { version = "0.10.0", features = [
 ] }
 byteorder = "1.5.0"
 tokio = { version = "1.40.0", features = ["full"] }
+
+[features]
+serde = []
