--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -51,4 +51,5 @@ members = [
   "libp2p_peer_id_from_secp256k1_secret_key_example",
   "libp2p_peer_id_generation_example",
   "libp2p_kademlia_json_example",
+  "libp2p_lookup",
 ]
