--- a/libp2p_workspace_example/libp2p_kademlia_json_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_kademlia_json_example/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4.38"
 env_logger = "0.11.5"
 libp2p = { version = "0.54.1", features = ["full"] }
 log = "0.4.22"
