--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -197,4 +197,5 @@ members = [
   "tokio_basic_example",
   "tokio_init_tracing_opentelemetry_example",
   "tokio_async_loop_mut_variable_example",
+  "tokio_task_id_example",
 ]
