--- a/axum_workspace_example/axum_example1/Cargo.toml
+++ b/axum_workspace_example/axum_example1/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.7"
+http = "1.2.0"
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
 tokio = { version = "1.41.0", features = ["full"] }
-tower-http = { version = "0.6.1", features = ["fs", "trace"] }
+tower-http = { version = "0.6.1", features = ["cors", "fs", "trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
