--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -53,4 +53,5 @@ members = [
   "libp2p_lookup",
   "libp2p_pnet_presharedkey_example",
   "libp2p_client_reconnection_example",
+  "libp2p_perf_example",
 ]
