--- a/dioxus_workspace_example/dioxus_example/Cargo.toml
+++ b/dioxus_workspace_example/dioxus_example/Cargo.toml
@@ -2,9 +2,14 @@
 name = "dioxus_example"
 version = "0.1.0"
 edition = "2021"
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus = "0.4.0"
-dioxus-desktop = "0.4.0"
+dioxus = { version = "0.6.0", features = ["fullstack"] }
+reqwest = "0.12.9"
+serde = "1.0.159"
+
+[features]
+default = []
+server = ["dioxus/server"]
+web = ["dioxus/web"]
