add libp2p p2prpc example

--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -54,4 +54,5 @@ members = [
   "libp2p_pnet_presharedkey_example",
   "libp2p_client_reconnection_example",
   "libp2p_perf_example",
+  "libp2p_p2prpc_example",
 ]
