add raft_kv_memstore_grpc example

--- a/openraft_workspace_example/Cargo.toml
+++ b/openraft_workspace_example/Cargo.toml
@@ -3,9 +3,10 @@
 resolver = "2"
 
 members = [
-        "raft_kv_rocksdb",
-        "raft_kv_memstore",
-        "raft_kv_memstore_singlethreaded",
-        "raft_kv_memstore_network_v2",
-        "raft_poem_tarpc_rocksdb",
+  "raft_kv_rocksdb",
+  "raft_kv_memstore",
+  "raft_kv_memstore_singlethreaded",
+  "raft_kv_memstore_network_v2",
+  "raft_kv_memstore_grpc",
+  "raft_poem_tarpc_rocksdb",
 ]
