add poc libp2p kademlia example

--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -55,4 +55,5 @@ members = [
   "libp2p_client_reconnection_example",
   "libp2p_perf_example",
   "libp2p_p2prpc_example",
+  "poc_libpp2p_kademlia_example",
 ]
