--- a/libp2p_workspace_example/libp2p_peer_id_from_secp256k1_secret_key_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_peer_id_from_secp256k1_secret_key_example/Cargo.toml
@@ -7,4 +7,10 @@ edition = "2024"
 ethers = "2.0.14"
 hex = "0.4.3"
 libp2p = { version = "0.54.1", features = ["full"] }
-secp256k1 = { version = "0.30.0", features = ["alloc", "std", "hashes", "rand", "serde"] }
+secp256k1 = { version = "0.30.0", features = [
+  "alloc",
+  "std",
+  "hashes",
+  "rand",
+  "serde",
+] }
