--- a/libp2p_workspace_example/libp2p_browser_webrtc_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_browser_webrtc_example/Cargo.toml
@@ -15,9 +15,19 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 axum = "0.7.9"
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "b057f918df4ca1da0d3af6e0103811618eb90c06", features = ["ed25519", "macros", "ping", "tokio"] }
-libp2p-webrtc = { git = "https://github.com/libp2p/rust-libp2p", rev = "b057f918df4ca1da0d3af6e0103811618eb90c06", features = ["tokio"] }
-rust-embed = { version = "8.5.0", features = ["include-exclude", "interpolate-folder-path"] }
+libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "b057f918df4ca1da0d3af6e0103811618eb90c06", features = [
+  "ed25519",
+  "macros",
+  "ping",
+  "tokio",
+] }
+libp2p-webrtc = { git = "https://github.com/libp2p/rust-libp2p", rev = "b057f918df4ca1da0d3af6e0103811618eb90c06", features = [
+  "tokio",
+] }
+rust-embed = { version = "8.5.0", features = [
+  "include-exclude",
+  "interpolate-folder-path",
+] }
 tokio = { version = "1.41.1", features = ["macros", "net", "rt", "signal"] }
 tokio-util = { version = "0.7.12", features = ["compat"] }
 tower = "0.5.1"
@@ -26,12 +36,26 @@ mime_guess = "2.0.5"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3.74"
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "b057f918df4ca1da0d3af6e0103811618eb90c06", features = ["ed25519", "macros", "ping", "wasm-bindgen"] }
+libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "b057f918df4ca1da0d3af6e0103811618eb90c06", features = [
+  "ed25519",
+  "macros",
+  "ping",
+  "wasm-bindgen",
+] }
 libp2p-webrtc-websys = { git = "https://github.com/libp2p/rust-libp2p", rev = "b057f918df4ca1da0d3af6e0103811618eb90c06" }
 tracing-wasm = "0.2.1"
 wasm-bindgen = "0.2.97"
 wasm-bindgen-futures = "0.4.47"
-web-sys = { version = "0.3.74", features = ["Document", "Element", "HtmlElement", "Node", "Response", "Window"] }
+web-sys = { version = "0.3.74", features = [
+  "Document",
+  "Element",
+  "HtmlElement",
+  "Node",
+  "Response",
+  "Window",
+] }
 
 [lints]
-rust.unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
+rust.unexpected_cfgs = { level = "warn", check-cfg = [
+  'cfg(wasm_bindgen_unstable_test_coverage)',
+] }
