--- a/libp2p_workspace_example/libp2p_perf_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_perf_example/Cargo.toml
@@ -8,7 +8,9 @@ anyhow = "1.0.94"
 clap = { version = "4.5.23", features = ["derive"] }
 futures = "0.3.31"
 futures-timer = "3.0.3"
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", version = "0.54.1", features = ["full"] }
+libp2p = { git = "https://github.com/libp2p/rust-libp2p", version = "0.54.1", features = [
+  "full",
+] }
 libp2p-perf = { git = "https://github.com/libp2p/rust-libp2p" }
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
