--- a/axum_workspace_example/axum_auth_custom_example/Cargo.toml
+++ b/axum_workspace_example/axum_auth_custom_example/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-async-trait = "0.1.83"
-axum = "0.7.9"
-axum-auth = "0.7.0"
+async-trait = "0.1.85"
+axum = "0.8.1"
+axum-auth = "0.8.0-rc.1"
 http = "1.2.0"
 reqwest = "0.12"
-tokio = { version = "1.42.0", features = ["full"] }
+tokio = { version = "1.43.0", features = ["full"] }
