--- a/axum_workspace_example/axum_image_upload_example/Cargo.toml
+++ b/axum_workspace_example/axum_image_upload_example/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.7.9", features = ["multipart"] }
-tokio = { version = "1.42.0", features = ["full"] }
+async-trait = "0.1.85"
+axum = { version = "0.8.1", features = ["multipart"] }
+tokio = { version = "1.43.0", features = ["full"] }
 tower = "0.5.2"
 tower-http = { version = "0.6.2", features = ["limit"] }
