--- a/axum_workspace_example/axum_vs_nginx_example/Cargo.toml
+++ b/axum_workspace_example/axum_vs_nginx_example/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.95"
 axum = "0.8.1"
+axum-extra = "0.10"
 axum-server = "0.7.1"
 futures = "0.3.31"
 futures-lite = "2.5.0"
