--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -53,4 +53,5 @@ members = [
   "axum_csrf_minimal_example",
   "axum_handlebars_example",
   "axum_serve_with_hyper_example",
+  "axum_tower_boxclonesyncservice_example",
 ]
