--- a/leptos_workspace_example/axum-leptos-example/Cargo.toml
+++ b/leptos_workspace_example/axum-leptos-example/Cargo.toml
@@ -11,6 +11,10 @@ axum = { version = "0.7", optional = true }
 console_error_panic_hook = "0.1"
 http = "1"
 leptos = { version = "0.7.2", features = ["nightly"] }
+leptos-use = { version = "0.15.3", default-features = false, features = [
+  "use_active_element",
+  "docs",
+] }
 leptos_axum = { version = "0.7.2", optional = true }
 leptos_meta = { version = "0.7.2" }
 leptos_router = { version = "0.7.2", features = ["nightly"] }
@@ -19,19 +23,20 @@ tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
 tower = { version = "0.5", optional = true }
 tower-http = { version = "0.6", features = ["fs"], optional = true }
 wasm-bindgen = "=0.2.99"
+web-sys = { version = "0.3.76", features = ["HtmlElement", "DomStringMap"] }
 
 [features]
 hydrate = ["leptos/hydrate"]
 csr = ["leptos/csr"]
 ssr = [
-    "dep:axum",
-    "dep:tokio",
-    "dep:tower",
-    "dep:tower-http",
-    "dep:leptos_axum",
-    "leptos/ssr",
-    "leptos_meta/ssr",
-    "leptos_router/ssr",
+  "dep:axum",
+  "dep:tokio",
+  "dep:tower",
+  "dep:tower-http",
+  "dep:leptos_axum",
+  "leptos/ssr",
+  "leptos_meta/ssr",
+  "leptos_router/ssr",
 ]
 
 # Defines a size-optimized profile for the WASM bundle in release mode
