--- a/leptos_workspace_example/axum_thaw_example/Cargo.toml
+++ b/leptos_workspace_example/axum_thaw_example/Cargo.toml
@@ -11,15 +11,20 @@ axum = { version = "0.7", optional = true }
 console_error_panic_hook = "0.1"
 http = "1"
 leptos = { version = "0.7", features = ["nightly"] }
+leptos-use = { version = "0.15.3", default-features = false, features = [
+  "use_active_element",
+  "docs",
+] }
 leptos_axum = { version = "0.7", optional = true }
 leptos_meta = { version = "0.7" }
 leptos_router = { version = "0.7", features = ["nightly"] }
 thaw = { version = "0.4", features = ["nightly"] }
 thiserror = "1"
 tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
-tower = { version = "0.4", optional = true }
-tower-http = { version = "0.5", features = ["fs"], optional = true }
+tower = { version = "0.5", optional = true }
+tower-http = { version = "0.6", features = ["fs"], optional = true }
 wasm-bindgen = "=0.2.99"
+web-sys = { version = "0.3.76", features = ["HtmlElement", "DomStringMap"] }
 
 [features]
 hydrate = ["leptos/hydrate", "thaw/hydrate"]
