--- a/leptos_workspace_example/axum_thaw_example/Cargo.toml
+++ b/leptos_workspace_example/axum_thaw_example/Cargo.toml
@@ -12,7 +12,7 @@ chrono = "0.4.39"
 console_error_panic_hook = "0.1"
 http = "1"
 leptos = { version = "0.7", features = ["nightly"] }
-leptos-chartistry = { version = "0.2.1", features = ["ssr"] }
+leptos-chartistry = "0.2.1"
 leptos-use = { version = "0.15.3", default-features = false, features = [
   "use_calendar",
   "use_active_element",
@@ -40,6 +40,7 @@ ssr = [
   "leptos/ssr",
   "leptos_meta/ssr",
   "leptos_router/ssr",
+  "leptos-use/ssr",
   "thaw/ssr",
 ]
 
