--- a/leptos_workspace_example/axum_thaw_example/Cargo.toml
+++ b/leptos_workspace_example/axum_thaw_example/Cargo.toml
@@ -13,7 +13,7 @@ console_error_panic_hook = "0.1"
 http = "1"
 leptos = { version = "0.7", features = ["nightly"] }
 # leptos-chartistry = "0.2.1"
-leptos-use = { version = "0.15.3", default-features = false, features = [
+leptos-use = { version = "0.15", default-features = false, features = [
   "use_calendar",
   "use_active_element",
   "docs",
@@ -27,8 +27,8 @@ thiserror = "2"
 tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
 tower = { version = "0.5", optional = true }
 tower-http = { version = "0.6", features = ["fs"], optional = true }
-wasm-bindgen = "=0.2.99"
-web-sys = { version = "0.3.76", features = ["HtmlElement", "DomStringMap"] }
+wasm-bindgen = "0.2"
+web-sys = { version = "0.3", features = ["HtmlElement", "DomStringMap"] }
 
 [features]
 hydrate = ["leptos/hydrate", "thaw/hydrate"]
