--- a/leptos_workspace_example/axum_thaw_example/Cargo.toml
+++ b/leptos_workspace_example/axum_thaw_example/Cargo.toml
@@ -11,6 +11,7 @@ axum = { version = "0.7", optional = true }
 chrono = "0.4.39"
 console_error_panic_hook = "0.1"
 http = "1"
+icondata = { version = "0.5.0", features = ["ant-design-icons", "box-icons"] }
 leptos = { version = "0.7", features = ["nightly"] }
 # leptos-chartistry = "0.2.1"
 leptos-use = { version = "0.15", default-features = false, features = [
@@ -19,6 +20,7 @@ leptos-use = { version = "0.15", default-features = false, features = [
   "docs",
 ] }
 leptos_axum = { version = "0.7", optional = true }
+leptos_icons = "0.4.0"
 leptos_meta = { version = "0.7" }
 leptos_router = { version = "0.7", features = ["nightly"] }
 # lucide-leptos = "1.1.0"
