add axum ssr_rs example

--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -54,4 +54,5 @@ members = [
   "axum_handlebars_example",
   "axum_serve_with_hyper_example",
   "axum_tower_boxclonesyncservice_example",
+  "axum_ssr_rs_example",
 ]
