add axum utf8bytes example

--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -55,4 +55,5 @@ members = [
   "axum_serve_with_hyper_example",
   "axum_tower_boxclonesyncservice_example",
   "axum_ssr_rs_example",
+  "axum_utf8bytes_example",
 ]
