--- a/libp2p_workspace_example/libp2p_browser_webrtc_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_browser_webrtc_example/Cargo.toml
@@ -15,13 +15,13 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 axum = "0.7.9"
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "b057f918df4ca1da0d3af6e0103811618eb90c06", features = [
+libp2p = { version = "0.55", features = [
   "ed25519",
   "macros",
   "ping",
   "tokio",
 ] }
-libp2p-webrtc = { git = "https://github.com/libp2p/rust-libp2p", rev = "b057f918df4ca1da0d3af6e0103811618eb90c06", features = [
+libp2p-webrtc = { version = "0.9.0-alpha", features = [
   "tokio",
 ] }
 rust-embed = { version = "8.5.0", features = [
@@ -36,13 +36,13 @@ mime_guess = "2.0.5"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3.74"
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "b057f918df4ca1da0d3af6e0103811618eb90c06", features = [
+libp2p = { version = "0.55", features = [
   "ed25519",
   "macros",
   "ping",
   "wasm-bindgen",
 ] }
-libp2p-webrtc-websys = { git = "https://github.com/libp2p/rust-libp2p", rev = "b057f918df4ca1da0d3af6e0103811618eb90c06" }
+libp2p-webrtc-websys = { version = "0.4" }
 tracing-wasm = "0.2.1"
 wasm-bindgen = "0.2.97"
 wasm-bindgen-futures = "0.4.47"
