--- a/libp2p_workspace_example/libp2p_browser_webrtc_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_browser_webrtc_example/Cargo.toml
@@ -15,15 +15,8 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 axum = "0.7.9"
-libp2p = { version = "0.55", features = [
-  "ed25519",
-  "macros",
-  "ping",
-  "tokio",
-] }
-libp2p-webrtc = { version = "0.9.0-alpha", features = [
-  "tokio",
-] }
+libp2p = { version = "0.55", features = ["ed25519", "macros", "ping", "tokio"] }
+libp2p-webrtc = { version = "0.9.0-alpha", features = ["tokio"] }
 rust-embed = { version = "8.5.0", features = [
   "include-exclude",
   "interpolate-folder-path",
