--- a/libp2p_workspace_example/libp2p_kad_b_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_kad_b_example/Cargo.toml
@@ -9,5 +9,11 @@ anyhow = "1.0.95"
 futures = "0.3.31"
 hex = "0.4.3"
 libp2p = { version = "0.55.0", features = ["full"] }
-secp256k1 = { version = "0.30.0", features = ["alloc", "std", "hashes", "rand", "serde"] }
+secp256k1 = { version = "0.30.0", features = [
+  "alloc",
+  "std",
+  "hashes",
+  "rand",
+  "serde",
+] }
 tokio = { version = "1.43.0", features = ["full"] }
