--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -62,4 +62,5 @@ members = [
   "libp2p_kad_b_example",
   "libp2p_kad_c1_example",
   "libp2p_kad_c2_example",
+  "libp2p_peer_id_k256_example",
 ]
