add solana get_signatures_for_address_with_config example

--- a/solana_workspace_example/Cargo.toml
+++ b/solana_workspace_example/Cargo.toml
@@ -8,4 +8,5 @@ members = [
   # "anchor_mycalculatordapp",
   "solana_serialize_deserialize_example",
   "solana_handle_event_example",
+  "solana_get_signatures_for_address_with_config_example",
 ]
