--- a/alloy_woekspace_example/alloy_contract_example/Cargo.toml
+++ b/alloy_woekspace_example/alloy_contract_example/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-alloy = { version = "0.8.0", features = ["contract", "full", "node-bindings"] }
-tokio = { version = "1.42.0", features = ["full"] }
+alloy = { version = "0.11.0", features = ["contract", "full", "node-bindings", "providers"] }
+tokio = { version = "1.43.0", features = ["full"] }
