--- a/alloy_woekspace_example/alloy_contract_example2/Cargo.toml
+++ b/alloy_woekspace_example/alloy_contract_example2/Cargo.toml
@@ -5,10 +5,11 @@ edition = "2021"
 
 [dependencies]
 eyre = "0.6.12"
-serde_json = "1.0.133"
-tokio = { version = "1.42.0", features = ["full"] }
-alloy = { version = "0.8.0", features = [
-    "full",
+serde_json = "1.0.138"
+tokio = { version = "1.43.0", features = ["full"] }
+alloy = { version = "0.11.0", features = [
+  "full",
+  "providers",
     "node-bindings",
     "rpc-types-debug",
     "rpc-types-trace",
