--- a/alloy_woekspace_example/alloy_contract_read_write_events_example/Cargo.toml
+++ b/alloy_woekspace_example/alloy_contract_read_write_events_example/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-alloy = { version = "0.8.0", features = ["full"] }
+alloy = { version = "0.11.0", features = ["full", "providers"] }
 dotenv = "0.15.0"
 eyre = "0.6.12"
 futures-util = "0.3.31"
-tokio = { version = "1.42.0", features = ["full"] }
+tokio = { version = "1.43.0", features = ["full"] }
 url = "2.5.4"
