--- a/tuono_workspace_example/tuono-tutorial/tsconfig.json
+++ b/tuono_workspace_example/tuono-tutorial/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ES2021", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
 
@@ -21,7 +21,10 @@
     "noFallthroughCasesInSwitch": true,
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+
+    // JavaScript Support
+    "allowJs": true
   },
   "include": ["src", "tuono.config.ts"]
 }
