--- a/tuono_workspace_example/tuono-tutorial/package.json
+++ b/tuono_workspace_example/tuono-tutorial/package.json
@@ -14,6 +14,7 @@
     "tuono": "0.17.6"
   },
   "devDependencies": {
+    "@swc/core-darwin-x64": "^1.10.12",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "typescript": "^5.7.3"
