--- a/tuono_workspace_example/tuono-tutorial/package.json
+++ b/tuono_workspace_example/tuono-tutorial/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@swc/core": "^1.10.14",
+    "@swc/core-darwin-arm64": "^1.10.12",
+    "@swc/core-darwin-x64": "^1.10.12",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "typescript": "^5.7.3"
