--- a/ethers_workspace_example/Cargo.toml
+++ b/ethers_workspace_example/Cargo.toml
@@ -9,4 +9,5 @@ members = [
   "ethers_pretty_print_example",
   "ethers_retry_endpoint_example",
   "ethers_retryclientbuilder_example",
+  "ethers_retryclientbuilder_provider_example",
 ]
