update rocksdb code

--- a/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
@@ -22,5 +22,8 @@ toy-rpc = { version = "0.10.0", features = [
   "tokio_runtime",
 ] }
 tracing = "0.1.41"
-tracing-futures = "0.2.5"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+
+[dev-dependencies]
+maplit = "1.0.2"
+tempfile = { version = "3.4.0" }
