--- a/axum_workspace_example/axum_auth_example/Cargo.toml
+++ b/axum_workspace_example/axum_auth_example/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-trait = "0.1.85"
+async-trait = "0.1.86"
 axum = "0.8.1"
-axum-auth = "0.8.0-rc.1"
+axum-auth = "0.8.1"
 http = "1.2.0"
 reqwest = "0.12"
 tokio = { version = "1.43.0", features = ["full"] }
