--- a/axum_workspace_example/axum_websocket_client_example/Cargo.toml
+++ b/axum_workspace_example/axum_websocket_client_example/Cargo.toml
@@ -6,12 +6,12 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.8.1", features = ["ws"] }
-axum-extra = "0.10.0"
+axum-extra = { version = "0.10.0", features = ["typed-header"] }
 futures = "0.3.31"
-futures-util = "0.3.31"
+futures-util = { version = "0.3.31", features = ["sink", "std"] }
 headers = "0.4.0"
 tokio = { version = "1.43.0", features = ["full"] }
 tokio-tungstenite = "0.26.1"
 tower-http = { version = "0.6.2", features = ["fs", "trace"] }
 tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", features = ["tracing", "env-filter", "std"] }
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
