--- a/axum_workspace_example/axum_websocket_server_example/Cargo.toml
+++ b/axum_workspace_example/axum_websocket_server_example/Cargo.toml
@@ -5,14 +5,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = { version = "0.8.1", features = ["ws", "http2"] }
-axum-extra = { version = "0.10", features = ["typed-header"] }
-axum-server = { version = "0.7.1", features = ["tls-rustls"] }
+axum = { version = "0.8.1", features = ["ws"] }
+axum-extra = { version = "0.10.0", features = ["typed-header"] }
 futures = "0.3.31"
-futures-util = "0.3.31"
+futures-util = { version = "0.3.31", features = ["sink", "std"] }
 headers = "0.4.0"
 tokio = { version = "1.43.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["fs", "trace"] }
 tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", features = ["tracing", "env-filter", "std"] }
-util = "0.1.3"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
