--- a/ethers_workspace_example/Cargo.toml
+++ b/ethers_workspace_example/Cargo.toml
@@ -10,4 +10,5 @@ members = [
   "ethers_retry_endpoint_example",
   "ethers_retryclientbuilder_example",
   "ethers_retryclientbuilder_provider_example",
+  "ethers_u256_hex_example",
 ]
