add solana rpc getblock example

--- a/solana_workspace_example/Cargo.toml
+++ b/solana_workspace_example/Cargo.toml
@@ -11,4 +11,5 @@ members = [
   "solana_get_signatures_for_address_with_config_example",
   "solana_handle_transaction_with_config_example",
   "solana_rust_example",
+  "solana_rpc_getblock_example",
 ]
