add libp2p multiaddr example

--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -70,4 +70,5 @@ members = [
   "libp2p_tuono_b_example",
   "libp2p_tuono_c1_example",
   "libp2p_tuono_c2_example",
+  "libp2p_multiaddr_example",
 ]
