make libp2p dns server and client example

--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -63,7 +63,8 @@ members = [
   "libp2p_kad_c1_example",
   "libp2p_kad_c2_example",
   "libp2p_peer_id_k256_example",
-  "libp2p_dns_example",
+  "libp2p_dns_server_example",
+  "libp2p_dns_client_example",
   "libp2p_quic_tls_server_example",
   "libp2p_quic_tls_client_example",
   "libp2p_tuono_a_example",
