add rand rng trait enum example 2

--- a/rand_workspace_example/Cargo.toml
+++ b/rand_workspace_example/Cargo.toml
@@ -10,4 +10,5 @@ members = [
   "rand_uniform_distribution_example",
   "rand_rngcore_example",
   "rand_rng_trait_enum_example",
+  "rand_rng_trait_enum_example2",
 ]
